# AIaaS_LLM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
data/raw/: 01Aug2023.csv  Book1.csv  telecom_sample_data_dictonary.csv
deployment_script/: deploy_script.sh  dev_deploy_script.sh
docs/BTO_LLM_Backend/: index.html
docs/BTO_LLM_Backend/src/: index.html  main.html
docs/BTO_LLM_Backend/src/core/: index.html  limiter.html  settings.html
docs/BTO_LLM_Backend/src/core/controller/: index.html
docs/BTO_LLM_Backend/src/core/controller/authentication_layer/: index.html  jwt.html
docs/BTO_LLM_Backend/src/core/controller/ethic_layer/: fact_checking.html  index.html  jailbreak.html  moderation.html
docs/BTO_LLM_Backend/src/core/controller/orchestration_layer/: embedding_pipeline.html  index.html  model.html
docs/BTO_LLM_Backend/src/core/schema/: api_response.html  feedback_request.html  index.html  login_transaction.html  prediction_request.html  ratelimit_response.html
docs/BTO_LLM_Backend/src/router/: index.html
docs/BTO_LLM_Backend/src/router/v1/: api.html  index.html
docs/BTO_LLM_Backend/src/router/v1/endpoint/: authentication_layer.html  chatbot.html  index.html
docs/BTO_LLM_Backend/tests/: chatbot.html  index.html  test_auth.html
src/: .flake8  app.py  app_custom.py  docker-compose.yml  feedback_log.txt  main.py  main.py.save  requirements.txt
src/Interface/: chat_api.py
src/core/: settings.py
src/core/controller/: logging.py
src/core/controller/authentication_layer/: api_jwt.py  jwt.py
src/core/controller/ethic_layer/: fact_checking.py  jailbreak.py  moderation.py
src/core/controller/orchestration_layer/: base.py  embedding_pipeline.py  llm_adaptation.py  model.py  science_pipeline.py
src/core/schema/: Login.py  api_response.py  feedback_request.py  login_transaction.py  prediction_request.py  ratelimit_response.py  speech_response.py
src/core/secret/: customer_data.txt  hashed_passwords.txt
src/embedding_layer/db_faiss/: index.faiss  index.pkl
src/logs/: feedback_log.txt  log_config.py
src/router/v1/: api.py
src/router/v1/endpoint/: authentication_layer.py  chatbot.py  test.py
src/static/embedding/praveen.govindaraj/: index.faiss  index.pkl
src/static/embedding/praveen.govindaraj/data/: file.csv
src/static/embedding/young.yy/: index.faiss  index.pkl
src/static/embedding/zhuofan.chen/: index.pkl
src/static/embedding/zhuofan.chen/embedding/: index.faiss  index.pkl
src/static/logs/: feedback_praveen.govindaraj.txt
src/view/: view_app.py
tests/: chatbot.py  test_auth.py
