[tool.poetry]
name = "BTO_LLM_App"
version = "0.1.0"
description = ""
authors = ["Praveen Govindaraj"]

[tool.poetry.dependencies]
python = "3.10.0"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
streamlit = "^1.26.0"
ctransformers = "^0.2.26"
flake8 = "^6.1.0"
isort = "^5.12.0"
interrogate = "^1.5.0"
black = "^23.7.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
pip = "^23.2.1"
install = "^1.3.5"
transformers = {extras = ["torch"], version = "^4.32.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
