[tool.poetry]
name = "ai-datasteward"
version = "0.1.0"
description = ""
authors = ["Praveen Govindaraj"]

[tool.poetry.dependencies]
python = "3.8.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
streamlit = "^1.26.0"
streamlit-chat = "^0.1.1"
langchain = "^0.0.281"
openai = "^0.28.0"
faiss-cpu = "^1.7.4"
tiktoken = "^0.4.0"
flake8 = "^6.1.0"
bandit = "^1.7.5"
isort = "^5.12.0"
interrogate = "^1.5.0"
black = "^23.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
