[tool.poetry]
name = "bto-ais-llm-backend"
version = "0.1.0"
description = "Backend API Server for Service"
authors = ["Praveen Govindaraj <praveen.govindaraj@singtel.com>","Chen ZhuoFan <chenzhuofan.chen@singtel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "0.10.0"
ctransformers = "0.2.27"
faiss-cpu = "1.7.4"
aiohttp = "3.8.4"
huggingface-hub = "0.17.1"
pyjwt='2.8.0'
langchain = "0.0.251"
pydantic-core = "2.6.3"
sentence-transformers = "^2.2.2"
uvicorn = "0.22.0"
transformers = "4.33.2"
python-multipart = "0.0.6"
pydantic = "1.10.12"
fastapi = "0.96.0"
bcrypt = "4.0.1"
install = "1.3.5"
flake8 = "6.1.0"
pytest = "6.2.5"
slowapi = "^0.1.8"
cachetools = "^5.3.1"
pypdf = "^3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
